--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <input class="product_name_input" type="text" placeholder="Золотые Серьги">
                             </div>
 
-                            <button type="reset">очистить фильтр</button>
+                            <button>очистить фильтр</button>
                     </form>
                 </aside>
 
