--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <input class="product_name_input" type="text" placeholder="Золотые Серьги">
                             </div>
 
-                            <button>очистить фильтр</button>
+                            <a id="button" href="#">очистить фильтр</a>
                     </form>
                 </aside>
 
